--- a/index.html
+++ b/index.html
@@ -25,11 +25,65 @@
   <body>
     <header class="jumbotron">
       <h1 class="display-3">Work Day Scheduler</h1>
-      <p class="lead">A simple calendar app for scheduling your work day</p>
-      <p id="currentDay" class="lead"></p>
+      <p id="currentDay" class="lead display-4"></p>
+      <button id="clearFieldsBtn" type="button" class="btn btn-secondary">Clear Fields</button>
     </header>
+  
     <div class="container">
-      <!-- Timeblocks go here -->
+      <div id="hour-09" class="row time-div">
+        <div class="col-md-1 hour"><span id="9">9am</span></div>
+        <textarea class="col-md-10 time-block description"></textarea>
+        <button class="col-md-1 saveBtn"><i class="fas fa-lock"></i></button>
+      </div>
+  
+      <div id="hour-10" class="row time-div">
+        <div class="col-md-1 hour"><span id="10">10am</span></div>
+        <textarea class="col-md-10 time-block description"></textarea>
+        <button class="col-md-1 saveBtn"><i class="fas fa-lock"></i></button>
+      </div>
+  
+      <div id="hour-11" class="row time-div">
+        <div class="col-md-1 hour"><span id="11">11am</span></div>
+        <textarea class="col-md-10 time-block description"></textarea>
+        <button class="col-md-1 saveBtn"><i class="fas fa-lock"></i></button>
+      </div>
+  
+      <div id="hour-12" class="row time-div">
+        <div class="col-md-1 hour "><span id="12">12pm</span></div>
+        <textarea class="col-md-10 time-block description"></textarea>
+        <button class="col-md-1 saveBtn"><i class="fas fa-lock"></i></button>
+      </div>
+  
+      <div id="hour-13" class="row time-div">
+        <div class="col-md-1 hour "><span id="13">1pm</span></div>
+        <textarea class="col-md-10 time-block description"></textarea>
+        <button class="col-md-1 saveBtn"><i class="fas fa-lock"></i></button>
+      </div>
+  
+      <div id="hour-14" class="row time-div">
+        <div class="col-md-1 hour"><span id="14">2pm</span></div>
+        <textarea class="col-md-10 time-block description"></textarea>
+        <button class="col-md-1 saveBtn"><i class="fas fa-lock"></i></button>
+      </div>
+  
+      <div id="hour-15" class="row time-div">
+        <div class="col-md-1 hour "><span id="15">3pm</span></div>
+        <textarea class="col-md-10 time-block description"></textarea>
+        <button class="col-md-1 saveBtn"><i class="fas fa-lock"></i></button>
+      </div>
+  
+      <div id="hour-16" class="row time-div">
+        <div class="col-md-1 hour n"><span id="16">4pm</span></div>
+        <textarea class="col-md-10 time-block description"></textarea>
+        <button class="col-md-1 saveBtn"><i class="fas fa-lock"></i></button>
+      </div>
+  
+      <div id="hour-17" class="row time-div">
+        <div class="col-md-1 hour "><span id="17">5pm</span></div>
+        <textarea class="col-md-10 time-block description "></textarea>
+        <button class="col-md-1 saveBtn"><i class="fas fa-lock"></i></button>
+      </div>
+  
     </div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
